first hosting partially completed

--- a/index-1.html
+++ b/index-1.html
@@ -116,18 +116,21 @@
             <div class="nav-item dropdown">
               <a
                 href="#"
-                class="nav-link dropdown-toggle "
+                class="nav-link dropdown-toggle"
                 data-bs-toggle="dropdown"
                 >Cources</a
               >
               <div class="dropdown-menu m-0">
-                <a href="cma-usa.html" class="dropdown-item ">CMA USA</a>
+                <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
                 <a href="Course.html" class="dropdown-item">CMA India</a>
-                <a href="Course.html" class="dropdown-item">EA (Enrolled Agent)</a>
+                <a href="Course.html" class="dropdown-item"
+                  >EA (Enrolled Agent)</a
+                >
                 <a href="Course.html" class="dropdown-item">GST VAT</a>
                 <a href="Course.html" class="dropdown-item">ACCA IFRS</a>
               </div>
-            </div>            <a href="about-1.html" class="nav-item nav-link">About Us </a>
+            </div>
+            <a href="about-1.html" class="nav-item nav-link">About Us </a>
             <a href="elements.html" class="nav-item nav-link">FAQ Page</a>
             <a href="service-1.html" class="nav-item nav-link"
               >Blog/News Page (op)</a
@@ -183,12 +186,12 @@
                   prospire: Your Path to Success
                 </h1>
                 <a
-                href="Course.html"
+                  href="Course.html"
                   class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft"
                   >Our Cources</a
                 >
                 <a
-                href="contact.html"
+                  href="contact.html"
                   class="btn btn-outline-light py-md-3 px-md-5 animated slideInRight"
                   >Contact Us</a
                 >
@@ -328,8 +331,7 @@
                       class="portfolio-title border-bottom border-5 border-primary"
                       href
                     >
-                      <h4>CMA
-                        USA</h4>
+                      <h4>CMA USA</h4>
                       <small class="text-body text-uppercase"
                         ><i class="fa fa-folder text-primary me-2"></i>Certified
                         Management Accountant (USA)</small
@@ -338,10 +340,11 @@
                     <div class="portfolio-btn">
                       <div class="container">
                         Course Summary CMA USA coaching programme offered by IIC
-                        Lakshya provides an opportunity for students to be certified
-                        professionals. It helps them to acquire practical and
-                        theoretical knowledge in accounting and finance. According to
-                        recent studies, the most preferred industries by…
+                        Lakshya provides an opportunity for students to be
+                        certified professionals. It helps them to acquire
+                        practical and theoretical knowledge in accounting and
+                        finance. According to recent studies, the most preferred
+                        industries by…
                       </div>
                     </div>
                   </div>
@@ -349,7 +352,11 @@
                 <div class="portfolio-item">
                   <div class="position-relative portfolio-box">
                     <div class="portfolio-img rounded overflow-hidden">
-                      <img class="img-fluid w-100" src="img/portfolio-2.jpg" alt />
+                      <img
+                        class="img-fluid w-100"
+                        src="img/portfolio-2.jpg"
+                        alt
+                      />
                     </div>
                     <a
                       class="portfolio-title border-bottom border-5 border-primary"
@@ -363,19 +370,24 @@
                     </a>
                     <div class="portfolio-btn">
                       <div class="container">
-                        Course Summary The Cost and Management Accountants (CMA India)
-                        course offered by Prospire aims at building competence in
-                        students. The CMA certification has been the global benchmark
-                        for management accountants and financial professionals. The
-                        course offers training in particular fields…
+                        Course Summary The Cost and Management Accountants (CMA
+                        India) course offered by Prospire aims at building
+                        competence in students. The CMA certification has been
+                        the global benchmark for management accountants and
+                        financial professionals. The course offers training in
+                        particular fields…
                       </div>
                     </div>
                   </div>
-                      </div>
+                </div>
                 <div class="portfolio-item">
                   <div class="position-relative portfolio-box">
                     <div class="portfolio-img rounded overflow-hidden">
-                      <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt />
+                      <img
+                        class="img-fluid w-100"
+                        src="img/portfolio-3.jpg"
+                        alt
+                      />
                     </div>
                     <a
                       class="portfolio-title border-bottom border-5 border-primary"
@@ -389,20 +401,25 @@
                     </a>
                     <div class="portfolio-btn">
                       <div class="container">
-                        The Enrolled Agent (EA) designation, offered by Prospire, is a
-                        prestigious qualification for U.S. tax professionals. EAs are
-                        IRS-authorized experts who represent individuals, businesses,
-                        and organizations in tax matters. This credential signifies
-                        top-tier expertise in tax law, making it a valuable asset for
+                        The Enrolled Agent (EA) designation, offered by
+                        Prospire, is a prestigious qualification for U.S. tax
+                        professionals. EAs are IRS-authorized experts who
+                        represent individuals, businesses, and organizations in
+                        tax matters. This credential signifies top-tier
+                        expertise in tax law, making it a valuable asset for
                         those in need of tax-related services.
                       </div>
                     </div>
                   </div>
-                      </div>
+                </div>
                 <div class="portfolio-item">
                   <div class="position-relative portfolio-box">
                     <div class="portfolio-img rounded overflow-hidden">
-                      <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt />
+                      <img
+                        class="img-fluid w-100"
+                        src="img/portfolio-4.jpg"
+                        alt
+                      />
                     </div>
                     <a
                       class="portfolio-title border-bottom border-5 border-primary"
@@ -410,30 +427,35 @@
                     >
                       <h4>GST VAT</h4>
                       <small class="text-body text-uppercase"
-                        ><i class="fa fa-folder text-primary me-2"></i>Certified GST
-                        VAT Accountant</small
+                        ><i class="fa fa-folder text-primary me-2"></i>Certified
+                        GST VAT Accountant</small
                       >
                     </a>
                     <div class="portfolio-btn">
                       <div class="container">
-                        The Certified GST VAT Accountant certification from Prospire
-                        is tailored for professionals specializing in Goods and
-                        Services Tax (GST) and Value Added Tax (VAT). In many
-                        countries, GST and VAT are critical components of the tax
-                        system, and this certification equips individuals with the
-                        expertise to manage compliance, calculations, and reporting
-                        related to these taxes. Certified GST VAT Accountants are
-                        experts in these tax systems, offering valuable support to
-                        businesses in navigating complex tax regulations and ensuring
+                        The Certified GST VAT Accountant certification from
+                        Prospire is tailored for professionals specializing in
+                        Goods and Services Tax (GST) and Value Added Tax (VAT).
+                        In many countries, GST and VAT are critical components
+                        of the tax system, and this certification equips
+                        individuals with the expertise to manage compliance,
+                        calculations, and reporting related to these taxes.
+                        Certified GST VAT Accountants are experts in these tax
+                        systems, offering valuable support to businesses in
+                        navigating complex tax regulations and ensuring
                         compliance.
                       </div>
                     </div>
                   </div>
-                            </div>
+                </div>
                 <div class="portfolio-item">
                   <div class="position-relative portfolio-box">
                     <div class="portfolio-img rounded overflow-hidden">
-                      <img class="img-fluid w-100" src="img/portfolio-5.jpg" alt />
+                      <img
+                        class="img-fluid w-100"
+                        src="img/portfolio-5.jpg"
+                        alt
+                      />
                     </div>
                     <a
                       class="portfolio-title border-bottom border-5 border-primary"
@@ -441,24 +463,24 @@
                     >
                       <h4>ACCA IFRS</h4>
                       <small class="text-body text-uppercase"
-                        ><i class="fa fa-folder text-primary me-2"></i>Certified ACCA
-                        IFRS Accountant</small
+                        ><i class="fa fa-folder text-primary me-2"></i>Certified
+                        ACCA IFRS Accountant</small
                       >
                     </a>
                     <div class="portfolio-btn">
                       <div class="container">
-                        The Certified ACCA IFRS Accountant, provided by Prospire, is
-                        for finance professionals seeking expertise in International
-                        Financial Reporting Standards (IFRS). This certification
-                        ensures a deep understanding of IFRS principles and their
-                        effective application. Certified ACCA IFRS Accountants are
-                        experts in financial reporting and international accounting
-                        standards, vital for accurate financial reporting and global
-                        compliance.
+                        The Certified ACCA IFRS Accountant, provided by
+                        Prospire, is for finance professionals seeking expertise
+                        in International Financial Reporting Standards (IFRS).
+                        This certification ensures a deep understanding of IFRS
+                        principles and their effective application. Certified
+                        ACCA IFRS Accountants are experts in financial reporting
+                        and international accounting standards, vital for
+                        accurate financial reporting and global compliance.
                       </div>
                     </div>
                   </div>
-                      </div>
+                </div>
               </div>
             </div>
           </div>
@@ -943,13 +965,14 @@
             >
               <a href class="navbar-brand">
                 <h1 class="m-0 text-white">
-                  <i class="fa fa-user-tie me-2"></i>Startup
+                  <i class="fa fa-user-tie me-2"></i>prospire
                 </h1>
               </a>
               <p class="mt-3 mb-4">
-                Lorem diam sit erat dolor elitr et, diam lorem justo amet clita
-                stet eos sit. Elitr dolor duo lorem, elitr clita ipsum sea. Diam
-                amet erat lorem stet eos. Diam amet et kasd eos duo.
+                Stay updated with the latest news, course offerings, and
+                educational insights. Subscribe to our newsletter and be the
+                first to know about opportunities to enhance your career. Join
+                our community of learners and stay connected with Prospire.
               </p>
               <form action>
                 <div class="input-group">
@@ -958,7 +981,7 @@
                     class="form-control border-white p-3"
                     placeholder="Your Email"
                   />
-                  <button class="btn btn-dark">Sign Up</button>
+                  <button class="btn btn-dark">send</button>
                 </div>
               </form>
             </div>
@@ -973,22 +996,17 @@
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-geo-alt text-primary me-2"></i>
-                  <p class="mb-0">123 Street, New York, USA</p>
-                </div>
-                <div class="d-flex mb-2">
-                  <i class="bi bi-envelope-open text-primary me-2"></i>
                   <p class="mb-0">
-                    <a
-                      href="https://demo.htmlcodex.com/cdn-cgi/l/email-protection"
-                      class="__cf_email__"
-                      data-cfemail="1c75727a735c79647d716c7079327f7371"
-                      >[email&#160;protected]</a
-                    >
+                    Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka
                   </p>
                 </div>
                 <div class="d-flex mb-2">
+                  <i class="bi bi-envelope-open text-primary me-2"></i>
+                  <p class="mb-0">educationprospire@gmail.com</p>
+                </div>
+                <div class="d-flex mb-2">
                   <i class="bi bi-telephone text-primary me-2"></i>
-                  <p class="mb-0">+012 345 67890</p>
+                  <p class="mb-0">+91 9056666275</p>
                 </div>
                 <div class="d-flex mt-4">
                   <a class="btn btn-primary btn-square me-2" href="#"
@@ -1014,10 +1032,14 @@
                 <div
                   class="link-animated d-flex flex-column justify-content-start"
                 >
-                  <a class="text-light mb-2" href="#"
+                  <a class="text-light mb-2" href="index-1.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Home</a
                   >
-                  <a class="text-light mb-2" href="#"
+                  <a class="text-light mb-2" href="Course.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i
+                    >Cource</a
+                  >
+                  <a class="text-light mb-2" href=""
                     ><i class="bi bi-arrow-right text-primary me-2"></i>About
                     Us</a
                   >
@@ -1025,16 +1047,9 @@
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Our
                     Services</a
                   >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Meet The
-                    Team</a
-                  >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Latest
-                    Blog</a
-                  >
-                  <a class="text-light" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Contact
+
+                  <a class="text-light" href="contact.htm9]6+6">
+                    <i class="bi bi-arrow-right text-primary me-2"></i>Contact
                     Us</a
                   >
                 </div>
@@ -1043,34 +1058,32 @@
                 <div
                   class="section-title-1 section-title-sm position-relative pb-3 mb-4"
                 >
-                  <h3 class="text-light mb-0">Popular Links</h3>
+                  <h3 class="text-light mb-0">Cources</h3>
                 </div>
                 <div
                   class="link-animated d-flex flex-column justify-content-start"
                 >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Home</a
+                  <a class="text-light mb-2" href="cma-usa.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i> CMA
+                    USA</a
                   >
                   <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>About
-                    Us</a
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>
+                    CMA INDIA
+                  </a>
+                  <a class="text-light mb-2" href="#"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>
+                    EA( ENROLLED AGENT)
+                  </a>
+                  <a class="text-light mb-2" href="#"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>
+
+                    GST VAT</a
                   >
                   <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Our
-                    Services</a
-                  >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Meet The
-                    Team</a
-                  >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Latest
-                    Blog</a
-                  >
-                  <a class="text-light" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Contact
-                    Us</a
-                  >
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>
+                    ACCA IFRS
+                  </a>
                 </div>
               </div>
             </div>
@@ -1088,12 +1101,10 @@
             >
               <p class="mb-0">
                 &copy;
-                <a class="text-white border-bottom" href="#">Your Site Name</a>.
-                All Rights Reserved. Designed by
-                <a
-                  class="text-white border-bottom"
-                  href="https://htmlcodex.com/"
-                  >HTML Codex</a
+                <a class="text-white border-bottom" href="https://">Prospire</a
+                >. All Rights Reserved. Designed by
+                <a class="text-white border-bottom" href="https://wexorai.com/"
+                  >WexorAI</a
                 >
               </p>
             </div>
