--- a/Course.html
+++ b/Course.html
@@ -412,11 +412,45 @@
         </div>
       </div>
     </div>
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container py-5 mb-5">
+          <div class="bg-white">
+            <div class="owl-carousel vendor-carousel">
+              <img src="img/vendor-1.jpg" alt />
+              <img src="img/vendor-2.jpg" alt />
+              <img src="img/vendor-3.jpg" alt />
+              <img src="img/vendor-4.jpg" alt />
+              <img src="img/vendor-5.jpg" alt />
+              <img src="img/vendor-6.jpg" alt />
+              <img src="img/vendor-7.jpg" alt />
+              <img src="img/vendor-8.jpg" alt />
+              <img src="img/vendor-9.jpg" alt />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="container py-5 mb-5">
+          <div class="bg-white">
+            <div class="owl-carousel vendor-carousel">
+              <img src="img/vendor-1.jpg" alt />
+              <img src="img/vendor-2.jpg" alt />
+              <img src="img/vendor-3.jpg" alt />
+              <img src="img/vendor-4.jpg" alt />
+              <img src="img/vendor-5.jpg" alt />
+              <img src="img/vendor-6.jpg" alt />
+              <img src="img/vendor-7.jpg" alt />
+              <img src="img/vendor-8.jpg" alt />
+              <img src="img/vendor-9.jpg" alt />
+            </div>
+          </div>
+        </div>
+      </div>
+    
 
-    <div
-      class="container-fluid bg-dark text-light wow fadeInUp"
+      <div
+      class="container-fluid bg-dark text-light mt-5 wow fadeInUp"
       data-wow-delay="0.1s"
-      style="margin-top: 90px"
     >
       <div class="container">
         <div class="row gx-5">
@@ -426,13 +460,14 @@
             >
               <a href class="navbar-brand">
                 <h1 class="m-0 text-white">
-                  <i class="fa fa-user-tie me-2"></i>Startup
+                  <i class="fa fa-user-tie me-2"></i>prospire
                 </h1>
               </a>
               <p class="mt-3 mb-4">
-                Lorem diam sit erat dolor elitr et, diam lorem justo amet clita
-                stet eos sit. Elitr dolor duo lorem, elitr clita ipsum sea. Diam
-                amet erat lorem stet eos. Diam amet et kasd eos duo.
+                Stay updated with the latest news, course offerings, and
+                educational insights. Subscribe to our newsletter and be the
+                first to know about opportunities to enhance your career. Join
+                our community of learners and stay connected with Prospire.
               </p>
               <form action>
                 <div class="input-group">
@@ -441,7 +476,7 @@
                     class="form-control border-white p-3"
                     placeholder="Your Email"
                   />
-                  <button class="btn btn-dark">Sign Up</button>
+                  <button class="btn btn-dark">send</button>
                 </div>
               </form>
             </div>
@@ -456,22 +491,17 @@
                 </div>
                 <div class="d-flex mb-2">
                   <i class="bi bi-geo-alt text-primary me-2"></i>
-                  <p class="mb-0">123 Street, New York, USA</p>
-                </div>
-                <div class="d-flex mb-2">
-                  <i class="bi bi-envelope-open text-primary me-2"></i>
                   <p class="mb-0">
-                    <a
-                      href="https://demo.htmlcodex.com/cdn-cgi/l/email-protection"
-                      class="__cf_email__"
-                      data-cfemail="5f363139301f3a273e322f333a713c3032"
-                      >[email&#160;protected]</a
-                    >
+                    Prestige Atlanta,80 Feet Rd, Koramangala 1A Block, Karnataka
                   </p>
                 </div>
                 <div class="d-flex mb-2">
+                  <i class="bi bi-envelope-open text-primary me-2"></i>
+                  <p class="mb-0">educationprospire@gmail.com</p>
+                </div>
+                <div class="d-flex mb-2">
                   <i class="bi bi-telephone text-primary me-2"></i>
-                  <p class="mb-0">+012 345 67890</p>
+                  <p class="mb-0">+91 9056666275</p>
                 </div>
                 <div class="d-flex mt-4">
                   <a class="btn btn-primary btn-square me-2" href="#"
@@ -497,10 +527,14 @@
                 <div
                   class="link-animated d-flex flex-column justify-content-start"
                 >
-                  <a class="text-light mb-2" href="#"
+                  <a class="text-light mb-2" href="index-1.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Home</a
                   >
-                  <a class="text-light mb-2" href="#"
+                  <a class="text-light mb-2" href="Course.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i
+                    >Cource</a
+                  >
+                  <a class="text-light mb-2" href=""
                     ><i class="bi bi-arrow-right text-primary me-2"></i>About
                     Us</a
                   >
@@ -508,16 +542,9 @@
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Our
                     Services</a
                   >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Meet The
-                    Team</a
-                  >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Latest
-                    Blog</a
-                  >
-                  <a class="text-light" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Contact
+
+                  <a class="text-light" href="contact.htm9]6+6">
+                    <i class="bi bi-arrow-right text-primary me-2"></i>Contact
                     Us</a
                   >
                 </div>
@@ -526,34 +553,32 @@
                 <div
                   class="section-title-1 section-title-sm position-relative pb-3 mb-4"
                 >
-                  <h3 class="text-light mb-0">Popular Links</h3>
+                  <h3 class="text-light mb-0">Cources</h3>
                 </div>
                 <div
                   class="link-animated d-flex flex-column justify-content-start"
                 >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Home</a
+                  <a class="text-light mb-2" href="cma-usa.html"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i> CMA
+                    USA</a
                   >
                   <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>About
-                    Us</a
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>
+                    CMA INDIA
+                  </a>
+                  <a class="text-light mb-2" href="#"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>
+                    EA( ENROLLED AGENT)
+                  </a>
+                  <a class="text-light mb-2" href="#"
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>
+
+                    GST VAT</a
                   >
                   <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Our
-                    Services</a
-                  >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Meet The
-                    Team</a
-                  >
-                  <a class="text-light mb-2" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Latest
-                    Blog</a
-                  >
-                  <a class="text-light" href="#"
-                    ><i class="bi bi-arrow-right text-primary me-2"></i>Contact
-                    Us</a
-                  >
+                    ><i class="bi bi-arrow-right text-primary me-2"></i>
+                    ACCA IFRS
+                  </a>
                 </div>
               </div>
             </div>
@@ -571,12 +596,10 @@
             >
               <p class="mb-0">
                 &copy;
-                <a class="text-white border-bottom" href="#">Your Site Name</a>.
-                All Rights Reserved. Designed by
-                <a
-                  class="text-white border-bottom"
-                  href="https://htmlcodex.com/"
-                  >HTML Codex</a
+                <a class="text-white border-bottom" href="https://">Prospire</a
+                >. All Rights Reserved. Designed by
+                <a class="text-white border-bottom" href="https://wexorai.com/"
+                  >WexorAI</a
                 >
               </p>
             </div>
