--- a/contact.html
+++ b/contact.html
@@ -122,17 +122,17 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
-                <a href="Course.html" class="dropdown-item">CMA India</a>
-                <a href="Course.html" class="dropdown-item"
+                <a href="404.html" class="dropdown-item">CMA India</a>
+                <a href="404.html" class="dropdown-item"
                   >EA (Enrolled Agent)</a
                 >
-                <a href="Course.html" class="dropdown-item">GST VAT</a>
-                <a href="Course.html" class="dropdown-item">ACCA IFRS</a>
+                <a href="404.html" class="dropdown-item">GST VAT</a>
+                <a href="404.html" class="dropdown-item">ACCA IFRS</a>
               </div>
             </div>
-            <a href="about-1.html" class="nav-item nav-link">About Us </a>
-            <a href="elements.html" class="nav-item nav-link">FAQ Page</a>
-            <a href="service-1.html" class="nav-item nav-link"
+            <a href="404.html" class="nav-item nav-link">About Us </a>
+            <a href="404.html" class="nav-item nav-link">FAQ Page</a>
+            <a href="404.html" class="nav-item nav-link"
               >Blog/News Page (op)</a
             >
           </div>
@@ -444,7 +444,7 @@
                     Services</a
                   >
 
-                  <a class="text-light" href="contact.htm9]6+6">
+                  <a class="text-light" href="contact.html">
                     <i class="bi bi-arrow-right text-primary me-2"></i>Contact
                     Us</a
                   >
