--- a/index-1.html
+++ b/index-1.html
@@ -122,19 +122,15 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
-                <a href="Course.html" class="dropdown-item">CMA India</a>
-                <a href="Course.html" class="dropdown-item"
-                  >EA (Enrolled Agent)</a
-                >
-                <a href="Course.html" class="dropdown-item">GST VAT</a>
-                <a href="Course.html" class="dropdown-item">ACCA IFRS</a>
+                 <a href="404.html" class="dropdown-item">CMA India</a>
+                <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
+                <a href="404.html" class="dropdown-item">GST VAT</a>
+                <a href="404.html" class="dropdown-item">ACCA IFRS</a>
               </div>
             </div>
-            <a href="about-1.html" class="nav-item nav-link">About Us </a>
-            <a href="elements.html" class="nav-item nav-link">FAQ Page</a>
-            <a href="service-1.html" class="nav-item nav-link"
-              >Blog/News Page (op)</a
-            >
+            <a href="404.html " class="nav-item nav-link">About Us </a>
+            <a href="404.html" class="nav-item nav-link">FAQ Page</a>
+            <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
           </div>
 
           <a href="contact.html" class="btn btn-primary py-2 px-3 ms-3"
@@ -291,7 +287,7 @@
               <div class="d-flex flex-column justify-content-start">
                 <a
                   class="h5 fw-semi-bold bg-light rounded py-3 px-4 d-flex justify-content-between mb-2"
-                  href="#"
+                  href="cma-usa.html"
                   ><span>CMA USA</span> <i class="bi bi-arrow-right"></i
                 ></a>
                 <a
@@ -329,7 +325,7 @@
                     </div>
                     <a
                       class="portfolio-title border-bottom border-5 border-primary"
-                      href
+                      href="cma-usa.html"
                     >
                       <h4>CMA USA</h4>
                       <small class="text-body text-uppercase"
@@ -1048,7 +1044,7 @@
                     Services</a
                   >
 
-                  <a class="text-light" href="contact.htm9]6+6">
+                  <a class="text-light" href="contact.html">
                     <i class="bi bi-arrow-right text-primary me-2"></i>Contact
                     Us</a
                   >
