--- a/404.html
+++ b/404.html
@@ -122,12 +122,12 @@
                 >
                 <div class="dropdown-menu m-0">
                   <a href="cma-usa.html" class="dropdown-item active">CMA USA</a>
-                  <a href="Course.html" class="dropdown-item">CMA India</a>
-                  <a href="Course.html" class="dropdown-item"
+                  <a href="404.html" class="dropdown-item">CMA India</a>
+                  <a href="404.html" class="dropdown-item"
                     >EA (Enrolled Agent)</a
                   >
-                  <a href="Course.html" class="dropdown-item">GST VAT</a>
-                  <a href="Course.html" class="dropdown-item">ACCA IFRS</a>
+                  <a href="404.html" class="dropdown-item">GST VAT</a>
+                  <a href="404.html" class="dropdown-item">ACCA IFRS</a>
                 </div>
               </div>
   
@@ -205,9 +205,9 @@
                   </li>
                 </ul>
               </div> -->
-              <a href="about-1.html" class="nav-item nav-link">About Us </a>
-              <a href="elements.html" class="nav-item nav-link">FAQ Page</a>
-              <a href="service-1.html" class="nav-item nav-link"
+              <a href="404.html" class="nav-item nav-link">About Us </a>
+              <a href="404.html" class="nav-item nav-link">FAQ Page</a>
+              <a href="404.html" class="nav-item nav-link"
                 >Blog/News Page (op)</a
               >
             </div>
@@ -223,10 +223,10 @@
         >
           <div class="row py-5">
             <div class="col-12 pt-lg-5 mt-lg-5 text-center">
-              <h1 class="display-4 text-white animated zoomIn mb-3">CMA USA</h1>
+              <h1 class="display-4 text-white animated zoomIn mb-3">404</h1>
               <a href="index-1.html" class="h5 text-white">Home</a>
               <i class="fa fa-angle-double-right text-white px-2"></i>
-              <a href class="h5 text-white">CMA USA</a>
+              <a href class="h5 text-white">404 page</a>
             </div>
           </div>
         </div>
@@ -266,12 +266,12 @@
         <div class="row justify-content-center">
           <div class="col-lg-6">
             <h1 class="display-1">404</h1>
-            <h1>Page Not Found</h1>
+            <h1>Page working progress</h1>
             <p class="mb-4">
               We’re sorry, the page you have looked for does not exist in our
               website! Maybe go to our home page or try to use a search?
             </p>
-            <a class="btn btn-primary py-3 px-5" href>Go Back To Home</a>
+            <a class="btn btn-primary py-3 px-5" href="index-1.html">Go Back To Home</a>
           </div>
         </div>
       </div>
@@ -372,7 +372,7 @@
                     Services</a
                   >
 
-                  <a class="text-light" href="contact.htm9]6+6">
+                  <a class="text-light" href="contact.html">
                     <i class="bi bi-arrow-right text-primary me-2"></i>Contact
                     Us</a
                   >
