--- a/Course.html
+++ b/Course.html
@@ -122,19 +122,15 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
-                <a href="Course.html" class="dropdown-item">CMA India</a>
-                <a href="Course.html" class="dropdown-item"
-                  >EA (Enrolled Agent)</a
-                >
-                <a href="Course.html" class="dropdown-item">GST VAT</a>
-                <a href="Course.html" class="dropdown-item">ACCA IFRS</a>
+                <a href="404.html" class="dropdown-item">CMA India</a>
+                <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
+                <a href="404.html" class="dropdown-item">GST VAT</a>
+                <a href="404.html" class="dropdown-item">ACCA IFRS</a>
               </div>
             </div>
-            <a href="about-1.html" class="nav-item nav-link">About Us </a>
-            <a href="elements.html" class="nav-item nav-link">FAQ Page</a>
-            <a href="service-1.html" class="nav-item nav-link"
-              >Blog/News Page (op)</a
-            >
+            <a href="404.html" class="nav-item nav-link">About Us </a>
+            <a href="404.html" class="nav-item nav-link">FAQ Page</a>
+            <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
           </div>
 
           <a href="contact.html" class="btn btn-primary py-2 px-3 ms-3"
@@ -413,42 +409,41 @@
       </div>
     </div>
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container py-5 mb-5">
-          <div class="bg-white">
-            <div class="owl-carousel vendor-carousel">
-              <img src="img/vendor-1.jpg" alt />
-              <img src="img/vendor-2.jpg" alt />
-              <img src="img/vendor-3.jpg" alt />
-              <img src="img/vendor-4.jpg" alt />
-              <img src="img/vendor-5.jpg" alt />
-              <img src="img/vendor-6.jpg" alt />
-              <img src="img/vendor-7.jpg" alt />
-              <img src="img/vendor-8.jpg" alt />
-              <img src="img/vendor-9.jpg" alt />
-            </div>
+      <div class="container py-5 mb-5">
+        <div class="bg-white">
+          <div class="owl-carousel vendor-carousel">
+            <img src="img/vendor-1.jpg" alt />
+            <img src="img/vendor-2.jpg" alt />
+            <img src="img/vendor-3.jpg" alt />
+            <img src="img/vendor-4.jpg" alt />
+            <img src="img/vendor-5.jpg" alt />
+            <img src="img/vendor-6.jpg" alt />
+            <img src="img/vendor-7.jpg" alt />
+            <img src="img/vendor-8.jpg" alt />
+            <img src="img/vendor-9.jpg" alt />
           </div>
         </div>
       </div>
-      <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container py-5 mb-5">
-          <div class="bg-white">
-            <div class="owl-carousel vendor-carousel">
-              <img src="img/vendor-1.jpg" alt />
-              <img src="img/vendor-2.jpg" alt />
-              <img src="img/vendor-3.jpg" alt />
-              <img src="img/vendor-4.jpg" alt />
-              <img src="img/vendor-5.jpg" alt />
-              <img src="img/vendor-6.jpg" alt />
-              <img src="img/vendor-7.jpg" alt />
-              <img src="img/vendor-8.jpg" alt />
-              <img src="img/vendor-9.jpg" alt />
-            </div>
+    </div>
+    <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+      <div class="container py-5 mb-5">
+        <div class="bg-white">
+          <div class="owl-carousel vendor-carousel">
+            <img src="img/vendor-1.jpg" alt />
+            <img src="img/vendor-2.jpg" alt />
+            <img src="img/vendor-3.jpg" alt />
+            <img src="img/vendor-4.jpg" alt />
+            <img src="img/vendor-5.jpg" alt />
+            <img src="img/vendor-6.jpg" alt />
+            <img src="img/vendor-7.jpg" alt />
+            <img src="img/vendor-8.jpg" alt />
+            <img src="img/vendor-9.jpg" alt />
           </div>
         </div>
       </div>
-    
+    </div>
 
-      <div
+    <div
       class="container-fluid bg-dark text-light mt-5 wow fadeInUp"
       data-wow-delay="0.1s"
     >
@@ -543,7 +538,7 @@
                     Services</a
                   >
 
-                  <a class="text-light" href="contact.htm9]6+6">
+                  <a class="text-light" href="contact.html">
                     <i class="bi bi-arrow-right text-primary me-2"></i>Contact
                     Us</a
                   >
