--- a/cma-usa.html
+++ b/cma-usa.html
@@ -120,12 +120,10 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="cma-usa.html" class="dropdown-item active">CMA USA</a>
-                <a href="Course.html" class="dropdown-item">CMA India</a>
-                <a href="Course.html" class="dropdown-item"
-                  >EA (Enrolled Agent)</a
-                >
-                <a href="Course.html" class="dropdown-item">GST VAT</a>
-                <a href="Course.html" class="dropdown-item">ACCA IFRS</a>
+                <a href="404.html" class="dropdown-item">CMA India</a>
+                <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
+                <a href="404.html" class="dropdown-item">GST VAT</a>
+                <a href="404.html" class="dropdown-item">ACCA IFRS</a>
               </div>
             </div>
 
@@ -203,11 +201,9 @@
                 </li>
               </ul>
             </div> -->
-            <a href="about-1.html" class="nav-item nav-link">About Us </a>
-            <a href="elements.html" class="nav-item nav-link">FAQ Page</a>
-            <a href="service-1.html" class="nav-item nav-link"
-              >Blog/News Page (op)</a
-            >
+            <a href="404.html" class="nav-item nav-link">About Us </a>
+            <a href="404.html" class="nav-item nav-link">FAQ Page</a>
+            <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
           </div>
 
           <a href="contact.html" class="btn btn-primary py-2 px-3 ms-3"
@@ -1169,7 +1165,7 @@
                     Services</a
                   >
 
-                  <a class="text-light" href="contact.htm9]6+6">
+                  <a class="text-light" href="contact.html">
                     <i class="bi bi-arrow-right text-primary me-2"></i>Contact
                     Us</a
                   >
