--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from demo.htmlcodex.com/pro/startup/index-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 25 Oct 2023 05:37:39 GMT -->
+  <!-- Mirrored from demo.htmlcodex.com/pro/startup/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 25 Oct 2023 05:37:39 GMT -->
   <head>
     <meta charset="utf-8" />
     <title>Prospire - The Accounting and Finance Institution</title>
@@ -112,7 +112,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto py-0">
-            <a href="index-1.html" class="nav-item nav-link active">Home</a>
+            <a href="index.html" class="nav-item nav-link active">Home</a>
             <div class="nav-item dropdown">
               <a
                 href="#"
@@ -1028,7 +1028,7 @@
                 <div
                   class="link-animated d-flex flex-column justify-content-start"
                 >
-                  <a class="text-light mb-2" href="index-1.html"
+                  <a class="text-light mb-2" href="index.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Home</a
                   >
                   <a class="text-light mb-2" href="Course.html"
@@ -1165,5 +1165,5 @@
     ></script>
   </body>
 
-  <!-- Mirrored from demo.htmlcodex.com/pro/startup/index-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 25 Oct 2023 05:38:35 GMT -->
+  <!-- Mirrored from demo.htmlcodex.com/pro/startup/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 25 Oct 2023 05:38:35 GMT -->
 </html>
