--- a/404.html
+++ b/404.html
@@ -112,7 +112,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0">
-              <a href="index-1.html" class="nav-item nav-link">Home</a>
+              <a href="index.html" class="nav-item nav-link">Home</a>
               <div class="nav-item dropdown">
                 <a
                   href="Course.html"
@@ -224,7 +224,7 @@
           <div class="row py-5">
             <div class="col-12 pt-lg-5 mt-lg-5 text-center">
               <h1 class="display-4 text-white animated zoomIn mb-3">404</h1>
-              <a href="index-1.html" class="h5 text-white">Home</a>
+              <a href="index.html" class="h5 text-white">Home</a>
               <i class="fa fa-angle-double-right text-white px-2"></i>
               <a href class="h5 text-white">404 page</a>
             </div>
@@ -271,7 +271,7 @@
               We’re sorry, the page you have looked for does not exist in our
               website! Maybe go to our home page or try to use a search?
             </p>
-            <a class="btn btn-primary py-3 px-5" href="index-1.html">Go Back To Home</a>
+            <a class="btn btn-primary py-3 px-5" href="index.html">Go Back To Home</a>
           </div>
         </div>
       </div>
@@ -356,7 +356,7 @@
                 <div
                   class="link-animated d-flex flex-column justify-content-start"
                 >
-                  <a class="text-light mb-2" href="index-1.html"
+                  <a class="text-light mb-2" href="index.html"
                     ><i class="bi bi-arrow-right text-primary me-2"></i>Home</a
                   >
                   <a class="text-light mb-2" href="Course.html"
