--- a/service-1.html
+++ b/service-1.html
@@ -69,7 +69,7 @@
 <div class="nav-item dropdown">
 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Home</a>
 <div class="dropdown-menu m-0">
-<a href="index-1.html" class="dropdown-item">Home 1</a>
+<a href="index.html" class="dropdown-item">Home 1</a>
 <a href="index-2.html" class="dropdown-item">Home 2</a>
 </div>
 </div>
