--- a/about-1.html
+++ b/about-1.html
@@ -3,10 +3,10 @@
   <!-- Mirrored from demo.htmlcodex.com/pro/startup/about-1.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 25 Oct 2023 05:38:38 GMT -->
   <head>
     <meta charset="utf-8" />
-    <title>Startup - Startup Company Website Template</title>
+    <title>Prospire - The Accounting and Finance Institution</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta content="Prospire Institution: " name="keywords" />
+    <meta content="Your Partner in Accounting Success" name="description" />
 
     <link href="img/favicon.html" rel="icon" />
 
