--- a/index-1.html
+++ b/index-1.html
@@ -122,7 +122,7 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
-                 <a href="404.html" class="dropdown-item">CMA India</a>
+                <a href="404.html" class="dropdown-item">CMA India</a>
                 <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
                 <a href="404.html" class="dropdown-item">GST VAT</a>
                 <a href="404.html" class="dropdown-item">ACCA IFRS</a>
@@ -335,12 +335,12 @@
                     </a>
                     <div class="portfolio-btn">
                       <div class="container">
-                        Course Summary CMA USA coaching programme offered by IIC
-                        Lakshya provides an opportunity for students to be
-                        certified professionals. It helps them to acquire
-                        practical and theoretical knowledge in accounting and
-                        finance. According to recent studies, the most preferred
-                        industries by…
+                        Prospire's CMA USA coaching program offers students the
+                        opportunity to become certified professionals. It equips
+                        them with both practical and theoretical knowledge in
+                        accounting and finance. Recent studies indicate that the
+                        most preferred industries for CMA USA professionals
+                        are...
                       </div>
                     </div>
                   </div>
@@ -366,12 +366,12 @@
                     </a>
                     <div class="portfolio-btn">
                       <div class="container">
-                        Course Summary The Cost and Management Accountants (CMA
-                        India) course offered by Prospire aims at building
-                        competence in students. The CMA certification has been
-                        the global benchmark for management accountants and
-                        financial professionals. The course offers training in
-                        particular fields…
+                        Prospire's CMA India course focuses on building
+                        competence in students. The CMA certification, globally
+                        recognized for management accountants and financial
+                        professionals, sets the standard. This course provides
+                        specialized training in specific fields, preparing
+                        individuals for successful careers...
                       </div>
                     </div>
                   </div>
@@ -397,7 +397,7 @@
                     </a>
                     <div class="portfolio-btn">
                       <div class="container">
-                        The Enrolled Agent (EA) designation, offered by
+                        The Enrolled Agent (EA) designation, provided by
                         Prospire, is a prestigious qualification for U.S. tax
                         professionals. EAs are IRS-authorized experts who
                         represent individuals, businesses, and organizations in
@@ -430,16 +430,15 @@
                     <div class="portfolio-btn">
                       <div class="container">
                         The Certified GST VAT Accountant certification from
-                        Prospire is tailored for professionals specializing in
+                        Prospire is designed for professionals specializing in
                         Goods and Services Tax (GST) and Value Added Tax (VAT).
                         In many countries, GST and VAT are critical components
-                        of the tax system, and this certification equips
-                        individuals with the expertise to manage compliance,
-                        calculations, and reporting related to these taxes.
-                        Certified GST VAT Accountants are experts in these tax
-                        systems, offering valuable support to businesses in
-                        navigating complex tax regulations and ensuring
-                        compliance.
+                        of the tax system. This certification equips individuals
+                        with the expertise to manage compliance, calculations,
+                        and reporting related to these taxes. Certified GST VAT
+                        Accountants are experts in these tax systems, offering
+                        valuable support to businesses in navigating complex tax
+                        regulations and ensuring compliance...
                       </div>
                     </div>
                   </div>
@@ -465,14 +464,15 @@
                     </a>
                     <div class="portfolio-btn">
                       <div class="container">
-                        The Certified ACCA IFRS Accountant, provided by
-                        Prospire, is for finance professionals seeking expertise
-                        in International Financial Reporting Standards (IFRS).
-                        This certification ensures a deep understanding of IFRS
-                        principles and their effective application. Certified
-                        ACCA IFRS Accountants are experts in financial reporting
-                        and international accounting standards, vital for
-                        accurate financial reporting and global compliance.
+                        The Certified ACCA IFRS Accountant program, provided by
+                        Prospire, is tailored for finance professionals seeking
+                        expertise in International Financial Reporting Standards
+                        (IFRS). This certification ensures a deep understanding
+                        of IFRS principles and their effective application.
+                        Certified ACCA IFRS Accountants are experts in financial
+                        reporting and international accounting standards,
+                        playing a vital role in ensuring accurate financial
+                        reporting and global compliance...
                       </div>
                     </div>
                   </div>
