--- a/about-2.html
+++ b/about-2.html
@@ -3,7 +3,7 @@
   <!-- Mirrored from demo.htmlcodex.com/pro/startup/about-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 25 Oct 2023 05:38:38 GMT -->
   <head>
     <meta charset="utf-8" />
-    <title>Startup - Startup Company Website Template</title>
+    <title>Prospire - The Accounting and Finance Institution</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content name="keywords" />
     <meta content name="description" />
