--- a/Course.html
+++ b/Course.html
@@ -122,13 +122,13 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
-                <a href="404.html" class="dropdown-item">CMA India</a>
+                <a href="cma-india.html" class="dropdown-item">CMA India</a>
                 <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
                 <a href="404.html" class="dropdown-item">GST VAT</a>
                 <a href="404.html" class="dropdown-item">ACCA IFRS</a>
               </div>
             </div>
-            <a href="404.html" class="nav-item nav-link">About Us </a>
+            <a href="about-1.html" class="nav-item nav-link">About Us </a>
             <a href="404.html" class="nav-item nav-link">FAQ Page</a>
             <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
           </div>
@@ -413,15 +413,16 @@
       <div class="container py-5 mb-5">
         <div class="bg-white">
           <div class="owl-carousel vendor-carousel">
-            <img src="img/vendor-1.jpg" alt />
-            <img src="img/vendor-2.jpg" alt />
-            <img src="img/vendor-3.jpg" alt />
-            <img src="img/vendor-4.jpg" alt />
-            <img src="img/vendor-5.jpg" alt />
-            <img src="img/vendor-6.jpg" alt />
-            <img src="img/vendor-7.jpg" alt />
-            <img src="img/vendor-8.jpg" alt />
-            <img src="img/vendor-9.jpg" alt />
+            <img src="img/A3_images/placement_main_1.jpg" alt />
+            <img src="img/A3_images/placement_main_4.jpg" alt />
+            <img src="img/A3_images/placement_main_5.jpg" alt />
+            <img src="img/A3_images/placement_consulting_1.jpg" alt />
+            <img src="img/A3_images/placement_consulting_2.jpg" alt />
+            <img src="img/A3_images/placement_consulting_3.jpg" alt />
+            <img src="img/A3_images/placement_consulting_4.jpg" alt />
+            <img src="img/A3_images/placement_finacial_1.jpg" alt />
+            <img src="img/A3_images/placement_main_2.jpg" alt />
+            <img src="img/A3_images/placement_main_3.jpg" alt />
           </div>
         </div>
       </div>
@@ -430,15 +431,16 @@
       <div class="container py-5 mb-5">
         <div class="bg-white">
           <div class="owl-carousel vendor-carousel">
-            <img src="img/vendor-1.jpg" alt />
-            <img src="img/vendor-2.jpg" alt />
-            <img src="img/vendor-3.jpg" alt />
-            <img src="img/vendor-4.jpg" alt />
-            <img src="img/vendor-5.jpg" alt />
-            <img src="img/vendor-6.jpg" alt />
-            <img src="img/vendor-7.jpg" alt />
-            <img src="img/vendor-8.jpg" alt />
-            <img src="img/vendor-9.jpg" alt />
+            <img  src="img/A3_images/placement_main_1.jpg" alt />
+            <img src="img/A3_images/placement_main_4.jpg" alt />
+            <img src="img/A3_images/placement_main_5.jpg" alt />
+            <img src="img/A3_images/placement_consulting_1.jpg" alt />
+            <img src="img/A3_images/placement_consulting_2.jpg" alt />
+            <img src="img/A3_images/placement_consulting_3.jpg" alt />
+            <img src="img/A3_images/placement_consulting_4.jpg" alt />
+            <img src="img/A3_images/placement_finacial_1.jpg" alt />
+            <img src="img/A3_images/placement_main_2.jpg" alt />
+            <img src="img/A3_images/placement_main_3.jpg" alt />
           </div>
         </div>
       </div>
