--- a/cma-india.html
+++ b/cma-india.html
@@ -118,8 +118,10 @@
                 >Cources</a
               >
               <div class="dropdown-menu m-0">
-                <a href="cma-usa.html" class="dropdown-item active">CMA USA</a>
-                <a href="cma-india.html" class="dropdown-item">CMA India</a>
+                <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
+                <a href="cma-india.html" class="dropdown-item active"
+                  >CMA India</a
+                >
                 <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
                 <a href="404.html" class="dropdown-item">GST VAT</a>
                 <a href="404.html" class="dropdown-item">ACCA IFRS</a>
@@ -216,10 +218,10 @@
       >
         <div class="row py-5">
           <div class="col-12 pt-lg-5 mt-lg-5 text-center">
-            <h1 class="display-4 text-white animated zoomIn mb-3">CMA USA</h1>
+            <h1 class="display-4 text-white animated zoomIn mb-3">CMA INDIA</h1>
             <a href="index.html" class="h5 text-white">Home</a>
             <i class="fa fa-angle-double-right text-white px-2"></i>
-            <a href class="h5 text-white">CMA USA</a>
+            <a href class="h5 text-white">CMA INDIA</a>
           </div>
         </div>
       </div>
@@ -259,7 +261,9 @@
         <div class="row g-5">
           <div class="col-lg-7">
             <div class="section-title-1 position-relative pb-3 mb-5">
-              <h5 class="fw-bold text-primary text-uppercase">ABOUT CMA USA</h5>
+              <h5 class="fw-bold text-primary text-uppercase">
+                ABOUT CMA INDIA
+              </h5>
               <h1 class="mb-0">
                 CMA USA Certification: Your Path to Global Success
               </h1>
