--- a/404.html
+++ b/404.html
@@ -43,95 +43,93 @@
     </div>
 
     <div class="container-fluid bg-dark px-5 d-none d-lg-block">
-        <div class="row gx-0">
-          <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
-            <div class="d-inline-flex align-items-center" style="height: 45px">
-              <small class="me-3 text-light"
-                ><i class="fa fa-map-marker-alt me-2"></i>Prestige Atlanta,80 Feet
-                Rd,Koramangala 1A Block, Karnataka</small
-              >
-              <small class="me-3 text-light"
-                ><i class="fa fa-phone-alt me-2"></i>+91 9056666275</small
-              >
-              <small class="text-light"
-                ><i class="fa fa-envelope-open me-2"></i>
-                educationprospire@gmail.com
-              </small>
-            </div>
+      <div class="row gx-0">
+        <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
+          <div class="d-inline-flex align-items-center" style="height: 45px">
+            <small class="me-3 text-light"
+              ><i class="fa fa-map-marker-alt me-2"></i>Prestige Atlanta,80 Feet
+              Rd,Koramangala 1A Block, Karnataka</small
+            >
+            <small class="me-3 text-light"
+              ><i class="fa fa-phone-alt me-2"></i>+91 9056666275</small
+            >
+            <small class="text-light"
+              ><i class="fa fa-envelope-open me-2"></i>
+              educationprospire@gmail.com
+            </small>
           </div>
-          <div class="col-lg-4 text-center text-lg-end">
-            <div class="d-inline-flex align-items-center" style="height: 45px">
-              <a
-                class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
-                href
-                ><i class="fab fa-twitter fw-normal"></i
-              ></a>
-              <a
-                class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
-                href
-                ><i class="fab fa-facebook-f fw-normal"></i
-              ></a>
-              <a
-                class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
-                href
-                ><i class="fab fa-linkedin-in fw-normal"></i
-              ></a>
-              <a
-                class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
-                href
-                ><i class="fab fa-instagram fw-normal"></i
-              ></a>
-              <a
-                class="btn btn-sm btn-outline-light btn-sm-square rounded-circle"
-                href
-                ><i class="fab fa-youtube fw-normal"></i
-              ></a>
-            </div>
+        </div>
+        <div class="col-lg-4 text-center text-lg-end">
+          <div class="d-inline-flex align-items-center" style="height: 45px">
+            <a
+              class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+              href
+              ><i class="fab fa-twitter fw-normal"></i
+            ></a>
+            <a
+              class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+              href
+              ><i class="fab fa-facebook-f fw-normal"></i
+            ></a>
+            <a
+              class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+              href
+              ><i class="fab fa-linkedin-in fw-normal"></i
+            ></a>
+            <a
+              class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2"
+              href
+              ><i class="fab fa-instagram fw-normal"></i
+            ></a>
+            <a
+              class="btn btn-sm btn-outline-light btn-sm-square rounded-circle"
+              href
+              ><i class="fab fa-youtube fw-normal"></i
+            ></a>
           </div>
         </div>
       </div>
-  
-      <div class="container-fluid position-relative p-0">
-        <nav
-          class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
+    </div>
+
+    <div class="container-fluid position-relative p-0">
+      <nav
+        class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
+      >
+        <a href="index.html" class="navbar-brand p-0">
+          <img
+            src="img/A3_images/Logo_transparent.png"
+            alt=""
+            width="130"
+            height="50"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
         >
-          <a href="index.html" class="navbar-brand p-0">
-            <img
-              src="img/A3_images/Logo_transparent.png"
-              alt=""
-              width="130"
-              height="50"
-          /></a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarCollapse"
-          >
-            <span class="fa fa-bars"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto py-0">
-              <a href="index.html" class="nav-item nav-link">Home</a>
-              <div class="nav-item dropdown">
-                <a
-                  href="Course.html"
-                  class="nav-link dropdown-toggle active"
-                  data-bs-toggle="dropdown"
-                  >Cources</a
-                >
-                <div class="dropdown-menu m-0">
-                  <a href="cma-usa.html" class="dropdown-item active">CMA USA</a>
-                  <a href="404.html" class="dropdown-item">CMA India</a>
-                  <a href="404.html" class="dropdown-item"
-                    >EA (Enrolled Agent)</a
-                  >
-                  <a href="404.html" class="dropdown-item">GST VAT</a>
-                  <a href="404.html" class="dropdown-item">ACCA IFRS</a>
-                </div>
+          <span class="fa fa-bars"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="navbar-nav ms-auto py-0">
+            <a href="index.html" class="nav-item nav-link">Home</a>
+            <div class="nav-item dropdown">
+              <a
+                href="Course.html"
+                class="nav-link dropdown-toggle active"
+                data-bs-toggle="dropdown"
+                >Cources</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="cma-usa.html" class="dropdown-item active">CMA USA</a>
+                <a href="cma-india.html" class="dropdown-item">CMA India</a>
+                <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
+                <a href="404.html" class="dropdown-item">GST VAT</a>
+                <a href="404.html" class="dropdown-item">ACCA IFRS</a>
               </div>
-  
-              <!-- <div class="nav-item dropdown">
+            </div>
+
+            <!-- <div class="nav-item dropdown">
                 <a
                   href="#"
                   class="nav-link dropdown-toggle"
@@ -205,33 +203,31 @@
                   </li>
                 </ul>
               </div> -->
-              <a href="404.html" class="nav-item nav-link">About Us </a>
-              <a href="404.html" class="nav-item nav-link">FAQ Page</a>
-              <a href="404.html" class="nav-item nav-link"
-                >Blog/News Page (op)</a
-              >
-            </div>
-  
-            <a href="contact.html" class="btn btn-primary py-2 px-3 ms-3"
-              >Contact Now</a
-            >
+            <a href="about-1.html" class="nav-item nav-link">About Us </a>
+            <a href="404.html" class="nav-item nav-link">FAQ Page</a>
+            <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
           </div>
-        </nav>
-        <div
-          class="container-fluid bg-primary py-5 bg-header"
-          style="margin-bottom: 90px"
-        >
-          <div class="row py-5">
-            <div class="col-12 pt-lg-5 mt-lg-5 text-center">
-              <h1 class="display-4 text-white animated zoomIn mb-3">404</h1>
-              <a href="index.html" class="h5 text-white">Home</a>
-              <i class="fa fa-angle-double-right text-white px-2"></i>
-              <a href class="h5 text-white">404 page</a>
-            </div>
+
+          <a href="contact.html" class="btn btn-primary py-2 px-3 ms-3"
+            >Contact Now</a
+          >
+        </div>
+      </nav>
+      <div
+        class="container-fluid bg-primary py-5 bg-header"
+        style="margin-bottom: 90px"
+      >
+        <div class="row py-5">
+          <div class="col-12 pt-lg-5 mt-lg-5 text-center">
+            <h1 class="display-4 text-white animated zoomIn mb-3">404</h1>
+            <a href="index.html" class="h5 text-white">Home</a>
+            <i class="fa fa-angle-double-right text-white px-2"></i>
+            <a href class="h5 text-white">404 page</a>
           </div>
         </div>
       </div>
-  
+    </div>
+
     <div class="modal fade" id="searchModal" tabindex="-1">
       <div class="modal-dialog modal-fullscreen">
         <div class="modal-content" style="background: rgba(9, 30, 62, 0.7)">
@@ -271,7 +267,9 @@
               We’re sorry, the page you have looked for does not exist in our
               website! Maybe go to our home page or try to use a search?
             </p>
-            <a class="btn btn-primary py-3 px-5" href="index.html">Go Back To Home</a>
+            <a class="btn btn-primary py-3 px-5" href="index.html"
+              >Go Back To Home</a
+            >
           </div>
         </div>
       </div>
