--- a/contact.html
+++ b/contact.html
@@ -122,19 +122,15 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
-                <a href="404.html" class="dropdown-item">CMA India</a>
-                <a href="404.html" class="dropdown-item"
-                  >EA (Enrolled Agent)</a
-                >
+                <a href="cma-india.html" class="dropdown-item">CMA India</a>
+                <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
                 <a href="404.html" class="dropdown-item">GST VAT</a>
                 <a href="404.html" class="dropdown-item">ACCA IFRS</a>
               </div>
             </div>
-            <a href="404.html" class="nav-item nav-link">About Us </a>
+            <a href="about-1.html" class="nav-item nav-link">About Us </a>
             <a href="404.html" class="nav-item nav-link">FAQ Page</a>
-            <a href="404.html" class="nav-item nav-link"
-              >Blog/News Page (op)</a
-            >
+            <a href="404.html" class="nav-item nav-link">Blog/News Page (op)</a>
           </div>
 
           <a href="contact.html" class="btn btn-primary py-2 px-3 ms-3 active"
