--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               >
               <div class="dropdown-menu m-0">
                 <a href="cma-usa.html" class="dropdown-item">CMA USA</a>
-                <a href="404.html" class="dropdown-item">CMA India</a>
+                <a href="cma-india.html" class="dropdown-item">CMA India</a>
                 <a href="404.html" class="dropdown-item">EA (Enrolled Agent)</a>
                 <a href="404.html" class="dropdown-item">GST VAT</a>
                 <a href="404.html" class="dropdown-item">ACCA IFRS</a>
